// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Selectbox computed   cssStates 1`] = `
Object {
  "disabled": false,
  "error": false,
  "focused": false,
  "selected": true,
  "warning": false,
  "with-metadata": false,
  "with-search": false,
}
`;

exports[`Selectbox computed   mappedDisabledText 1`] = `""`;

exports[`Selectbox computed   mappedHelperText 1`] = `""`;

exports[`Selectbox computed   mappedLabelText 1`] = `""`;

exports[`Selectbox computed   searchText 1`] = `""`;

exports[`Selectbox computed   selected 1`] = `""`;

exports[`Selectbox computed   selectedLabelText 1`] = `"Please select"`;

exports[`Selectbox computed   selectedMetadataText 1`] = `""`;

exports[`Selectbox computed   states 1`] = `
Object {
  "disabled": false,
  "error": false,
  "focused": false,
  "selected": true,
  "warning": false,
}
`;

exports[`Selectbox computed DISABLED cssStates 1`] = `
Object {
  "disabled": true,
  "error": false,
  "focused": false,
  "selected": true,
  "warning": false,
  "with-metadata": false,
  "with-search": false,
}
`;

exports[`Selectbox computed DISABLED mappedDisabledText 1`] = `""`;

exports[`Selectbox computed DISABLED mappedHelperText 1`] = `""`;

exports[`Selectbox computed DISABLED mappedLabelText 1`] = `""`;

exports[`Selectbox computed DISABLED searchText 1`] = `""`;

exports[`Selectbox computed DISABLED selected 1`] = `""`;

exports[`Selectbox computed DISABLED selectedLabelText 1`] = `"Please select"`;

exports[`Selectbox computed DISABLED selectedMetadataText 1`] = `""`;

exports[`Selectbox computed DISABLED states 1`] = `
Object {
  "disabled": true,
  "error": false,
  "focused": false,
  "selected": true,
  "warning": false,
}
`;
